Fix DigitalOcean App Platform config: add run command and health check settings

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,6 +7,14 @@ services:
       branch: main
     dockerfile_path: Dockerfile
     http_port: 80
+    run_command: php artisan migrate --force && php artisan config:cache && php artisan route:cache && php artisan view:cache && /usr/bin/supervisord
+    health_check:
+      http_path: /
+      initial_delay_seconds: 30
+      period_seconds: 10
+      timeout_seconds: 5
+      success_threshold: 1
+      failure_threshold: 3
     routes:
       - path: /
     envs:
